Add registration update endpoint
This commit adds an endpoint to update existing dynamic registrations.
Which allows tools to update their registration information without
needing to create a new registration.

It introduces two scopes from the LTI 1.3 specification:
1. `https://purl.imsglobal.org/spec/lti-reg/scope/registration.readonly`
  - Allows reading registration information.
2. `https://purl.imsglobal.org/spec/lti-reg/scope/registration`
  - Allows updating registration information.

When a tool uses this endpoint, Canvas will create a
`Lti::RegistrationUpdateRequest`, which will be surfaced to an
Administrator for approval. Once approved, the registration will be
updated, and deployments will be updated with the new values.

test plan:

- Create a tool with dynamic registration.
- Get an LTI advantage token with the
`https://purl.imsglobal.org/spec/lti-reg/scope/registration` scope.
- Use the token to call the update endpoint with the existing
 registration id.

closes INTEROP-9648
flag=lti_dr_registrations_update

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/386913
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Xander Moffatt <xmoffatt@instructure.com>
Product-Review: Paul Gray <paul.gray@instructure.com>
